# starter-cmake-project

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
test/: utest_start_cmake_project.cpp
